--- a/index.html
+++ b/index.html
@@ -1,147 +1,191 @@
 <!DOCTYPE html>
 <html class="no-js" lang="">
-  <head>
-    <meta charset="utf-8" />
-    <title></title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+  <meta charset="utf-8" />
+  <title></title>
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta property="og:title" content="" />
-    <meta property="og:type" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
-  </head>
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
-    integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ=="
-    crossorigin="anonymous"
-  />
-  <style>
-    body {
-      position: relative;
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
-    }
-    .splash,
-    .game {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background: white;
-      display: flex;
-      flex-direction: column;
-      padding: 20px;
-    }
-    .splash > .card,
-    .game > .card {
-      width: 100vw;
-      height: 100vh;
-    }
-  </style>
-  <body>
-    <div class="splash">
-      <div class="ui card">
-        <div class="content">
-          <h2 class="team"></h2>
-        </div>
-        <div class="content">
-          <h4 class="readiness"></h4>
-        </div>
-        <div class="extra content">
-          <div class="ui large transparent left icon input">
-            <button class="ui button ready">ready</button>
-          </div>
+  <meta property="og:title" content="" />
+  <meta property="og:type" content="" />
+  <meta property="og:url" content="" />
+  <meta property="og:image" content="" />
+</head>
+<link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
+        integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ=="
+        crossorigin="anonymous"
+/>
+<style>
+  body {
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+  }
+  .red {
+    color: #ff2e00;
+  }
+  .blue {
+    color: #041c52;
+  }
+  .red .game, .red .splash{
+    background: linear-gradient(270deg, #4d0017, #ff2e00);
+    background-size: 400% 400%;
+
+    -webkit-animation: AnimationName 30s ease infinite;
+    -moz-animation: AnimationName 30s ease infinite;
+    animation: AnimationName 30s ease infinite;
+  }
+
+  .blue .game, .blue .splash{
+    background: linear-gradient(270deg, #041c52, #46dbff);
+    background-size: 400% 400%;
+
+    -webkit-animation: AnimationName 30s ease infinite;
+    -moz-animation: AnimationName 30s ease infinite;
+    animation: AnimationName 30s ease infinite;
+  }
+
+  @-webkit-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+  }
+  @-moz-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+  }
+  @keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+  }
+  .splash,
+  .game {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .splash > .card,
+  .game > .card {
+    max-height: 500px;
+    max-width: 370px;
+  }
+  }
+</style>
+<body>
+<div class="splash">
+  <div class="ui card">
+    <div class="content">
+      <h2 class="team"></h2>
+    </div>
+    <div class="content">
+      <h4 class="readiness"></h4>
+    </div>
+    <div class="extra content">
+      <div class="ui large transparent left icon input">
+        <button class="ui button ready">ready</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="game">
+  <div class="ui card">
+    <div class="content">
+      <h2 class="team"></h2>
+
+      <div class="your-turn"></div>
+      <div class="score"></div>
+      <div class="timer"></div>
+    </div>
+    <div class="content">
+      <div class="tabu"></div>
+    </div>
+    <div class="extra content">
+      <div class="ui large transparent left icon input">
+        <div class="buttons">
+          <button class="ui button skip">skip</button>
+          <button class="ui button ok green">ok</button>
+          <button class="ui button wrong red ">wrong</button>
         </div>
       </div>
     </div>
-    <div class="game">
-      <div class="ui card">
-        <div class="content">
-          <h2 class="team"></h2>
+  </div>
+</div>
 
-          <div class="your-turn"></div>
-          <div class="score"></div>
-          <div class="timer"></div>
-        </div>
-        <div class="content">
-          <div class="tabu"></div>
-        </div>
-        <div class="extra content">
-          <div class="ui large transparent left icon input">
-            <div class="buttons">
-              <button class="ui button skip">skip</button>
-              <button class="ui button ok">ok</button>
-              <button class="ui button wrong">wrong</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+<script src="/socket.io/socket.io.js"></script>
+<script src="/jquery/dist/jquery.js"></script>
+<script>
+  const socket = io.connect('http://de9m0g7y2.iamsabre.sabrenow.com:4200');
+  socket.on('connect', function (data) {
+    socket.emit('join', socket.id);
+  });
+  socket.on('readiness', function (data) {
+    $('.readiness').html(data ? data + ' ready' : '');
+  });
+  socket.on('tabu', function (data) {
+    $('.tabu').html(data ? data : '');
+  });
+  socket.on('team-assignment', function (assignment) {
+    $('.team').html('You are in team: ' + assignment);
+    $(document.body).addClass(assignment)
+  });
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/jquery/dist/jquery.js"></script>
-    <script>
-      const socket = io.connect('http://192.168.0.107:4200');
-      socket.on('connect', function (data) {
-        socket.emit('join', socket.id);
-      });
-      socket.on('readiness', function (data) {
-        $('.readiness').html(data ? data + ' ready' : '');
-      });
-      socket.on('tabu', function (data) {
-        $('.tabu').html(data ? data : '');
-      });
-      socket.on('team-assignment', function (assignment) {
-        $('.team').html('You are in team: ' + assignment);
-      });
+  let count;
+  let interval;
 
-      let count;
-      let interval;
-
-      socket.on('score', function (score) {
-        $('.score').text(`blue ${score.blue} : ${score.red} red`);
-      });
-      socket.on('game-state', function (gameIsOn) {
-        console.log(gameIsOn);
-        gameIsOn ? $('.splash').hide() : $('.splash').show();
-        gameIsOn ? $('.game').show() : $('.game').hide();
-      });
-      socket.on('your-turn', function (countdown) {
-        $('.skip').show();
-        $('.ok').show();
-        $('.wrong').hide();
-        $('.your-turn').text('It is your turn');
-        count = countdown;
-        clearInterval(interval);
-        interval = setInterval(() => {
-          if (count <= 0) clearInterval(interval);
-          $('.timer').html(count--);
-        }, 1000);
-      });
-      socket.on('not-your-turn', function (color) {
-        $('.skip').hide();
-        $('.ok').hide();
-        $('.wrong').show();
-        $('.your-turn').text('It is ' + color + ' turn');
-        $('.timer').html('');
-        clearInterval(interval);
-      });
-      $('.skip').click((event) => {
-        socket.emit('skip', socket.id);
-      });
-      $('.ready').click((event) => {
-        socket.emit('ready', socket.id);
-      });
-      $('.ok').click((event) => {
-        socket.emit('ok', socket.id);
-      });
-      $('.wrong').click((event) => {
-        socket.emit('wrong', socket.id);
-      });
-    </script>
-  </body>
+  socket.on('score', function (score) {
+    $('.score').text(`blue ${score.blue} : ${score.red} red`);
+  });
+  socket.on('game-state', function (gameIsOn) {
+    console.log(gameIsOn);
+    gameIsOn ? $('.splash').hide() : $('.splash').show();
+    gameIsOn ? $('.game').show() : $('.game').hide();
+  });
+  socket.on('your-turn', function (countdown) {
+    $('.skip').show();
+    $('.ok').show();
+    $('.wrong').hide();
+    $('.your-turn').text('It is your turn');
+    count = countdown;
+    clearInterval(interval);
+    interval = setInterval(() => {
+      if (count <= 0) clearInterval(interval);
+      $('.timer').html(count--);
+    }, 1000);
+  });
+  socket.on('not-your-turn', function (color) {
+    $('.skip').hide();
+    $('.ok').hide();
+    $('.wrong').show();
+    $('.your-turn').text('It is ' + color + ' turn');
+    $('.timer').html('');
+    clearInterval(interval);
+  });
+  $('.skip').click((event) => {
+    socket.emit('skip', socket.id);
+  });
+  $('.ready').click((event) => {
+    socket.emit('ready', socket.id);
+  });
+  $('.ok').click((event) => {
+    socket.emit('ok', socket.id);
+  });
+  $('.wrong').click((event) => {
+    socket.emit('wrong', socket.id);
+  });
+</script>
+</body>
 </html>
